# siraj-mcp-platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP_COMPLETE.md  GEMINI.md  HANDOFF_PROMPT.md  LICENSE  README.md  SETUP.md  TECHNICAL_ANALYSIS_REPORT.md  claude_desktop_config.json  db_client.py  mcp-server-config.json  openapi-spec.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  start_server.sh  start_siraj_server.py  temp_fix_methods.py  test-mcp-integration.js  test_minimal_mcp.py  test_neon.py  tsconfig.json  validate_system.py  validate_system_ascii.py  validation_report.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
Archives/SIRAJ-v6.0/: Enhanced_72_Node_Archetypal_Table.md  Siraj_v6_Enhanced_Framework.md
Docs/: 2025-08-29-184500-research-audit.md  Implementation_Guide.md  Islamic_Tafsir_Methodology_Research.md  MCP_Research_Report.md  Methodology_First_Architecture.md  Revised_Analysis_72_Archetypal_Table.md  SIRAJ_v6.1_Adaptive_Semantic_Architecture.md  SIRAJ_v6.1_Deep_Synthesis.md  TECH_STACK_RESEARCH_2025-08-29_SIRAJ_V6.1_PIVOT.md
backend/: main.py
backend/scripts/: seed_test_data.py
certs/: server.crt
config/: settings.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/community/: page.tsx
frontend/app/dashboard/: page.tsx
scripts/: README.md  deploy-automation.cjs  deploy.sh  generate-ssl-cert.py  install.ps1  install.sh  run-e2e-tests.sh  setup-dev.js  setup-development.ps1  setup_neon_db.py  test-integration.py  validate-database.py
security/: security_config.py
src/: config-schema.ts  index.ts
src/database/: __init__.py  connection_manager.py  corpus_access.py
src/models/: linguistic_types.py
src/server/: adaptive_semantic_architecture.py  ai_model_interface.py  community_validation_interface.py  cultural_sovereignty_manager.py  enhanced_mcp_server.py  main_mcp_server.py  mock_community_profiles.py  multi_paradigm_validator.py  performance_optimizer.py  siraj_v6_1_engine.py  transformer_integration.py
src/server/data/: lexicons.db-shm  lexicons.db-wal
src/utils/: exceptions.py
tests/: global.setup.ts  global.teardown.ts  test_dual_protocol_server.py  test_framework.py
tests/e2e/: api-endpoints.spec.ts  authentication-flow.spec.ts  deployment-validation.spec.ts  mcp-server-integration.spec.ts  payment-processing.spec.ts
